fix overflow X in body

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -26,7 +26,7 @@ div#root {
 }
 
 body {
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 main {
