--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -5,7 +5,7 @@
     padding: 50px 55px 35px;
     background-color: $color-element-blue;
     border-top: 3px solid $color-main-color-dark;
-
+    margin: auto 0 0 0;
 }
 
 .contacts {
